The overlay no longer wraps

--- a/static/css/game.less
+++ b/static/css/game.less
@@ -63,6 +63,7 @@
     margin-left:6px;
     position:absolute;
     top:9px;
+    white-space:nowrap;
 
     .orow {
         display:block;
